Fixed some minor bugs.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,6 +15,7 @@
         <br><i><font color="#FFFDC4">• Freepik</font></i> [<font color=#99BAD1>Flaticon Basic License</font>] (<cite>http://www.flaticon.com/</cite>)
         <br><i><font color="#FFFDC4">• Vectors Market</font></i> [<font color=#99BAD1>Flaticon Basic License</font>] (<cite>http://www.flaticon.com/</cite>)
         <br><br><font color="#53E3B3">Sounds:</font>
+        <br><i><font color="#FFFDC4">• andersmmg</font></i> [<font color=#B9B0F4>CC BY 4.0</font>] (<cite>http://freesound.org/</cite>)
         <br><i><font color="#FFFDC4">• cabled_mess</font></i> [<font color=#6ACCB1>CC0 1.0</font>] (<cite>http://freesound.org/</cite>)
         <br><i><font color="#FFFDC4">• Intimidated</font></i> [<font color=#B9B0F4>CC BY 3.0</font>] (<cite>http://freesound.org/</cite>)
         <br><i><font color="#FFFDC4">• josepharaoh99</font></i> [<font color=#6ACCB1>CC0 1.0</font>] (<cite>http://freesound.org/</cite>)
