--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -1009,7 +1009,7 @@
     <string-array name="fortune_teller_aspect">
         <item>Bola de cristal</item>
         <item>Emoji</item>
-        <item>Emoticono</item>
+        <item>Píxel</item>
         <item>Smiley</item>
     </string-array>
     <string-array name="greetings">
